--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -1,2 +1,73 @@
 {
+  "gradebook.BulkManagementHistoryView.heading": "Bulk Management History",
+  "gradebook.BulkManagementHistoryView": "Below is a log of previous grade imports.  To download a CSV of your gradebook and import grades for override, return to the Gradebook.  Please note, after importing grades, it may take a few seconds to process the override.",
+  "gradebook.BulkManagementHistoryView.successDialog": "CSV processing. File uploads may take several minutes to complete.",
+  "gradebook.GradebookFilters.assignmentsFilterLabel": "Devoirs",
+  "gradebook.GradebookFilters.overallGradeFilterLabel": "Note globale",
+  "gradebook.GradebookFilters.studentGroupsFilterLabel": "Groupe d'étudiants",
+  "gradebook.GradebookFilters.includeCourseTeamMembersFilterLabel": "Include Course Team Members",
+  "gradebook.GradebookFilters.assignmentFilterLabel": "Devoir",
+  "gradebook.GradebookFilters.assignmentTypesLabel": "Types de travaux",
+  "gradebook.GradebookFilters.maxGradeFilterLabel": "Note Maximale",
+  "gradebook.GradebookFilters.minGradeFilterLabel": "Note Minimale",
+  "gradebook.GradebookFilters.cohorts": "Cohortes",
+  "gradebook.GradebookFilters.cohortsAll": "Cohort-All",
+  "gradebook.GradebookFilters.tracks": "Tracks",
+  "gradebook.GradebookFilters.trackAll": "Track-All",
+  "gradebook.GradebookFilters.closeFilters": "Fermer les filtres",
+  "gradebook.GradebookHeader.backButton": "Retour au tableau de bord",
+  "gradebook.GradebookHeader.appLabel": "Bulletin de notes",
+  "gradebook.GradebookHeader.frozenWarning": "The grades for this course are now frozen. Editing of grades is no longer allowed.",
+  "gradebook.GradebookHeader.unauthorizedWarning": "Vous n'êtes pas autorisé à voir le livret de notes pour ce cours",
+  "gradebook.GradebookHeader.toActivityLogButton": "View Bulk Management History",
+  "gradebook.GradebookHeader.toGradesView": "Return to Gradebook",
+  "gradebook.GradesView.BulkManagementControls.bulkManagementLabel": "Télécharger les notes",
+  "gradebook.GradesView.EditModal.headers.assignment": "Devoir",
+  "gradebook.GradesView.EditModal.headers.currentGrade": "Note actuelle",
+  "gradebook.GradesView.EditModal.headers.originalGrade": "Note initiale",
+  "gradebook.GradesView.EditModal.headers.student": "Étudiant",
+  "gradebook.GradesView.EditModal.title": "Editez les notes",
+  "gradebook.GradesView.EditModal.closeText": "Annuler",
+  "gradebook.GradesView.EditModal.contactSupport": "Showing most recent actions (max 5). To see more, please contact support",
+  "gradebook.GradesView.EditModal.saveVisibility": "Note: Once you save, your changes will be visible to students.",
+  "gradebook.GradesView.EditModal.saveGrade": "Sauvegarder les notes",
+  "gradebook.GradesView.EditModal.Overrides.adjustedGradeHeader": "Note ajustée",
+  "gradebook.GradesView.EditModal.Overrides.dateHeader": "Date",
+  "gradebook.GradesView.EditModal.Overrides.graderHeader": "Correcteur",
+  "gradebook.GradesView.EditModal.Overrides.reasonHeader": "Motif",
+  "gradebook.GradesTab.usersVisibilityLabel'": "Showing {filteredUsers} of {totalUsers} total learners",
+  "gradebook.GradesView.editFilterLabel": "Editer les filtres",
+  "gradebook.GradesView.table.headings.email": "Email",
+  "gradebook.GradesView.table.headings.totalGrade": "Note totale (%)",
+  "gradebook.GradesView.table.headings.username": "Nom d’utilisateur",
+  "gradebook.GradesView.table.labels.studentKey": "Clé d'étudiant",
+  "gradebook.GradesView.table.labels.username": "Nom d’utilisateur",
+  "gradebook.GradesView.table.totalGradePercentage": "La note totale est toujours affiché en pourcentage",
+  "gradebook.BulkManagementHistoryView.csvUploadLabel": "Importer les notes CSV",
+  "gradebook.GradesView.importGradesBtnText": "Importer les notes",
+  "gradebook.GradesView.ImportSuccessToast.description": "Import réussi ! Les notes vont être mises à jour.",
+  "gradebook.GradesView.ImportSuccessToast.showHistoryViewBtn": "Voir le rapport d'activité",
+  "gradebook.GradesView.InterventionsReport.title": "Rapport d'interventions",
+  "gradebook.GradesView.InterventionsReport.description": "Need to find students who may be falling behind?  Download the interventions report to obtain engagement metrics such as section attempts and visits.",
+  "gradebook.GradesView.InterventionsReport.downloadBtn": "Télécharger les interventions",
+  "gradebook.GradesView.filterHeading": "Étape 1 : Filtrer le rapport de notes",
+  "gradebook.GradesView.gradebookStepHeading": "Step 2: View or Modify Individual Grades",
+  "gradebook.GradesView.mastersHint": "available for learners in the Master's track only",
+  "gradebook.GradesView.PageButtons.prevPage": "Page précédente",
+  "gradebook.GradesView.PageButtons.nextPage": "Page suivante",
+  "gradebook.GradesView.scoreViewLabel": "Vue des notes",
+  "gradebook.GradesView.absoluteOption": "Absolu",
+  "gradebook.GradesView.percentOption": "Pourcentage",
+  "gradebook.GradesView.search.label": "Rechercher un apprenant",
+  "gradebook.GradesView.search.hint": "Chercher par nom d'utilisateur, email ou clé d'étudiant",
+  "gradebook.GradesView.editSuccessAlert": "The grade has been successfully edited.  You may see a slight delay before updates appear in the Gradebook.",
+  "gradebook.GradesView.maxCourseGradeInvalid": "La note maximale du cours doit être entre 0 et 100",
+  "gradebook.GradesView.minCourseGradeInvalid": "La note minimale du cours doit être entre 0 et 100",
+  "gradebook.GradesTab.FilterBadges.assignment": "Devoir",
+  "gradebook.GradesTab.FilterBadges.assignmentGrade": "Note des devoirs",
+  "gradebook.GradesTab.FilterBadges.assignmentType": "Type de travail",
+  "gradebook.GradesTab.FilterBadges.cohort": "Cohorte",
+  "gradebook.GradesTab.FilterBadges.courseGrade": "Note du cours",
+  "gradebook.GradesTab.FilterBadges.includeCourseRoleMembers": "Include Course Team Members",
+  "gradebook.GradesTab.FilterBadges.track": "Track"
 }
