chore: network button take message object not translated string

--- a/src/i18n/messages/fr_CA.json
+++ b/src/i18n/messages/fr_CA.json
@@ -1,6 +1,6 @@
 {
   "gradebook.BulkManagementHistoryView.heading": "Historique des changements en lot",
-  "gradebook.BulkManagementHistoryView": "Ci-dessous se trouve un historique des imports de notes précédents. Pour télécharger un CSV de votre carnet de notes et importer des notes pour les remplacer, retournez au Carnet de Note. Veuillez noter qu'après l'importation des notes, la procédure de remplacement prendra quelques secondes.",
+  "gradebook.BulkManagementHistoryView": "Ci-dessous se trouve un historique des importations de notes précédentes. Pour télécharger un CSV de votre carnet de notes et importer des notes pour les remplacer, retournez au Carnet de Note. Veuillez noter qu'après l'importation des notes, la procédure de remplacement prendra quelques secondes.",
   "gradebook.BulkManagementHistoryView.successDialog": "Traitement du CSV en cours. Le téléversement peut prendre plusieurs minutes à compléter.",
   "gradebook.GradebookFilters.assignmentsFilterLabel": "Devoirs",
   "gradebook.GradebookFilters.overallGradeFilterLabel": "Note globale",
@@ -28,7 +28,7 @@
   "gradebook.GradesView.EditModal.headers.student": "Étudiant",
   "gradebook.GradesView.EditModal.title": "Éditer les notes",
   "gradebook.GradesView.EditModal.closeText": "Annuler",
-  "gradebook.GradesView.EditModal.contactSupport": "Affiche les plus récentes actions (max 5). Pour en voir plus, veuillez contacter le support.",
+  "gradebook.GradesView.EditModal.contactSupport": "Affiche les plus récentes actions (max 5). Pour en voir plus, veuillez contacter le support",
   "gradebook.GradesView.EditModal.saveVisibility": "Note : une fois sauvegardés, vos changements seront visibles aux étudiants.",
   "gradebook.GradesView.EditModal.saveGrade": "Sauvegarde des notes",
   "gradebook.GradesView.EditModal.Overrides.adjustedGradeHeader": "Notes ajustées",
@@ -45,12 +45,12 @@
   "gradebook.GradesView.table.totalGradePercentage": "La valeur des notes totales est toujours affichée en pourcentage",
   "gradebook.BulkManagementHistoryView.csvUploadLabel": "Téléverser les notes en CSV",
   "gradebook.GradesView.importGradesBtnText": "Importer les notes",
-  "gradebook.GradesView.ImportSuccessToast.description": "Succès de l'importation ! Les notes seront mises à jour momentanément.",
+  "gradebook.GradesView.ImportSuccessToast.description": "Importation réussie! Les notes seront mises à jour momentanément.",
   "gradebook.GradesView.ImportSuccessToast.showHistoryViewBtn": "Voir le log des activités",
   "gradebook.GradesView.InterventionsReport.title": "Rapport des interventions",
-  "gradebook.GradesView.InterventionsReport.description": "Besoin de trouver les étudiants en difficulté ? Téléchargez le rapport d'interventions afin d'obtenir les métriques d'engagement telles que le nombre de tentatives ou de visites des sections.",
+  "gradebook.GradesView.InterventionsReport.description": "Besoin de trouver les étudiants en difficulté? Téléchargez le rapport d'interventions afin d'obtenir les métriques d'engagement telles que le nombre de tentatives ou de visites des sections.",
   "gradebook.GradesView.InterventionsReport.downloadBtn": "Télécharger les interventions",
-  "gradebook.GradesView.filterHeading": "Étape 1 : Filter le rapport de notes",
+  "gradebook.GradesView.filterHeading": "Étape 1 : Filtrer le rapport de notes",
   "gradebook.GradesView.gradebookStepHeading": "Étape 2 : Voir ou modifier les notes individuelles",
   "gradebook.GradesView.mastersHint": "disponible seulement aux apprenants sur le parcours Master",
   "gradebook.GradesView.PageButtons.prevPage": "Page précédente",
