feat: fixed assignment and course grade fields validations

--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -63,6 +63,10 @@
   "gradebook.GradesView.editSuccessAlert": "تم تعديل الدرجة بنجاح. قد تلاحظ تأخّرًا طفيفا في ظهور التحديثات في دفتر الدرجات.",
   "gradebook.GradesView.maxCourseGradeInvalid": "الدرجة القصوى يجب أن تكون بين 0 و 100",
   "gradebook.GradesView.minCourseGradeInvalid": "الدرجة الدنيا يجب أن تكون بين 0 و 100",
+  "gradebook.GradesView.minLessMaxGradeInvalid": "Minimum course grade must be less than maximum course grade",
+  "gradebook.GradesView.maxAssignmentGradeInvalid": "Maximum assignment grade must be between 0 and 100",
+  "gradebook.GradesView.minAssignmentGradeInvalid": "Minimum assignment grade must be between 0 and 100",
+  "gradebook.GradesView.minLessMaxAssignmentInvalid": "Minimum assignment grade must be less than maximum assignment grade",
   "gradebook.GradesTab.FilterBadges.assignment": "الواجب",
   "gradebook.GradesTab.FilterBadges.assignmentGrade": "درجة الواجب",
   "gradebook.GradesTab.FilterBadges.assignmentType": "نوع الواجب",
