--- a/src/i18n/messages/de.json
+++ b/src/i18n/messages/de.json
@@ -63,6 +63,10 @@
   "gradebook.GradesView.editSuccessAlert": "The grade has been successfully edited.  You may see a slight delay before updates appear in the Gradebook.",
   "gradebook.GradesView.maxCourseGradeInvalid": "Maximum course grade must be between 0 and 100",
   "gradebook.GradesView.minCourseGradeInvalid": "Minimum course grade must be between 0 and 100",
+  "gradebook.GradesView.minLessMaxGradeInvalid": "Minimum course grade must be less than maximum course grade",
+  "gradebook.GradesView.maxAssignmentGradeInvalid": "Maximum assignment grade must be between 0 and 100",
+  "gradebook.GradesView.minAssignmentGradeInvalid": "Minimum assignment grade must be between 0 and 100",
+  "gradebook.GradesView.minLessMaxAssignmentInvalid": "Minimum assignment grade must be less than maximum assignment grade",
   "gradebook.GradesTab.FilterBadges.assignment": "Assignment",
   "gradebook.GradesTab.FilterBadges.assignmentGrade": "Assignment Grade",
   "gradebook.GradesTab.FilterBadges.assignmentType": "Assignment Type",
