--- a/src/i18n/messages/es_419.json
+++ b/src/i18n/messages/es_419.json
@@ -63,6 +63,10 @@
   "gradebook.GradesView.editSuccessAlert": "La calificación ha sido editada de manera exitosa. Podrás apreciar un retraso mínimo mientras se realizan las actualizaciones en el libro de calificaciones. ",
   "gradebook.GradesView.maxCourseGradeInvalid": "La máxima calificación de curso  debe estar entre 0 y 100",
   "gradebook.GradesView.minCourseGradeInvalid": "La calificación de curso mínima debe estar entre 0 y 100",
+  "gradebook.GradesView.minLessMaxGradeInvalid": "Minimum course grade must be less than maximum course grade",
+  "gradebook.GradesView.maxAssignmentGradeInvalid": "Maximum assignment grade must be between 0 and 100",
+  "gradebook.GradesView.minAssignmentGradeInvalid": "Minimum assignment grade must be between 0 and 100",
+  "gradebook.GradesView.minLessMaxAssignmentInvalid": "Minimum assignment grade must be less than maximum assignment grade",
   "gradebook.GradesTab.FilterBadges.assignment": "Tarea",
   "gradebook.GradesTab.FilterBadges.assignmentGrade": "Calificación de la tarea",
   "gradebook.GradesTab.FilterBadges.assignmentType": "Tipo de tarea",
