--- a/src/i18n/messages/fa_IR.json
+++ b/src/i18n/messages/fa_IR.json
@@ -63,6 +63,10 @@
   "gradebook.GradesView.editSuccessAlert": "نمره با موفقیت ویرایش شد. ممکن است روزآمدسازی کارنامه کمی تأخیر داشته باشد.",
   "gradebook.GradesView.maxCourseGradeInvalid": "حداکثر نمره دوره آموزشی باید بین 0 تا 100 باشد",
   "gradebook.GradesView.minCourseGradeInvalid": "حداقل نمره دوره باید بین 0 تا 100 باشد",
+  "gradebook.GradesView.minLessMaxGradeInvalid": "Minimum course grade must be less than maximum course grade",
+  "gradebook.GradesView.maxAssignmentGradeInvalid": "Maximum assignment grade must be between 0 and 100",
+  "gradebook.GradesView.minAssignmentGradeInvalid": "Minimum assignment grade must be between 0 and 100",
+  "gradebook.GradesView.minLessMaxAssignmentInvalid": "Minimum assignment grade must be less than maximum assignment grade",
   "gradebook.GradesTab.FilterBadges.assignment": "تکلیف",
   "gradebook.GradesTab.FilterBadges.assignmentGrade": "نمره تکلیف",
   "gradebook.GradesTab.FilterBadges.assignmentType": "نوع تکلیف",
