--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -63,6 +63,10 @@
   "gradebook.GradesView.editSuccessAlert": "Les notes ont été éditées avec succès. Un délai est possible avant que vous ne constatiez la mise-à-jour dans le carnet de note.",
   "gradebook.GradesView.maxCourseGradeInvalid": "La note maximale du cours doit être entre 0 et 100",
   "gradebook.GradesView.minCourseGradeInvalid": "La note minimale du cours doit être entre 0 et 100",
+  "gradebook.GradesView.minLessMaxGradeInvalid": "Minimum course grade must be less than maximum course grade",
+  "gradebook.GradesView.maxAssignmentGradeInvalid": "Maximum assignment grade must be between 0 and 100",
+  "gradebook.GradesView.minAssignmentGradeInvalid": "Minimum assignment grade must be between 0 and 100",
+  "gradebook.GradesView.minLessMaxAssignmentInvalid": "Minimum assignment grade must be less than maximum assignment grade",
   "gradebook.GradesTab.FilterBadges.assignment": "Devoir",
   "gradebook.GradesTab.FilterBadges.assignmentGrade": "Note des devoirs",
   "gradebook.GradesTab.FilterBadges.assignmentType": "Type de travail",
